<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/nr_of_news_default"
        android:inputType="numberDecimal"
        android:key="@string/nr_of_news"
        android:selectAllOnFocus="true"
        android:title="@string/nr_of_news_label" />

    <ListPreference
        android:defaultValue="@string/settings_sort_by_default"
        android:entries="@array/settings_sort_by_labels"
        android:entryValues="@array/settings_sort_by_values"
        android:key="@string/settings_sort_by_key"
        android:title="@string/settings_sort_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>